k8s/app_namespace.yaml
apiVersion: v1 
kind: Namespace
metadata:
  name: forum-namespace

  labels:
    app: forum
    tier: production

  annotations:
    description: "Production environment for forum app"
