k8s/tmp-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-test
  namespace: forum-namespace
spec:
  restartPolicy: Never
  containers:
    - name: db-client
      image: mysql:8.0  # lightweight MySQL/MariaDB client
      command: ["sleep", "3600"]  # keeps pod alive so we can exec into it
      resources:
        requests:
          memory: "128Mi"
          cpu: "500m"
          
        limits: 
          memory: "256Mi"
          cpu: "500m"

  imagePullSecrets:
     - name: dockerhub-pull-secret
