k8s/forum-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forum-ingress
  namespace: forum-namespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:954552668021:certificate/a82bef1b-4b67-48bc-807a-202de3f4eaf2
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/wafv2-acl-arn: 'arn:aws:wafv2:eu-north-1:954552668021:regional/webacl/forum-web-acl/cd4a491e-53a7-4394-b459-ea5f2fe3baee'
    alb.ingress.kubernetes.io/healthcheck-path: /accounts/login/
    alb.ingress.kubernetes.io/success-codes: "200"

spec:
  ingressClassName: alb
  rules:
  - host: iho-test.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: forum-webapp-service
            port: 
              number: 8000
